src/styles/main.css
@font-face {
  font-family: pixel;
  src: url(/./PixelHackers.woff2);
}
@font-face {
  font-family: sans;
  src: url(/./PolySans-Relax.woff2);
}

h1 {
  margin: 0;
  font-size: clamp(40px, 6vw, 100px);
  text-align: left;
  color: blue;
  display: none;
}
p {
  margin: 0;
  font-family: sans;
  color: blue;
  font-size: clamp(14px, 2vw, 24px);
}
.prose p:not(:first-child) {
  margin-top: 1lh;
}
.top-right p {
  padding: 0;
  margin: -5px;
  font-size: clamp(20px, 3vw, 40px);
  text-align: right;
}
.top-right img {
  position: absolute;
  bottom: 5%;
  padding-top: 5%;
  height: 50%;
  width: 70%;
}
.top-right a:visited {
  color: blue;
}
.cell-top-left p {
  position: absolute;
  bottom: 5%;
  font-size: clamp(24px, 4vw, 50px);
  line-height: 95%;
}
.cell-bottom-left p {
  font-size: clamp(18px, 2.5vw, 35px);
  text-align: right;
}

.watch {
  font-family: pixel;
  font-size: clamp(36px, 5vw, 75px);
  position: absolute;
  z-index: 2;
  width: 300px;
  line-height: 105px;
  transform: rotate(6.729deg);
  border-radius: 100px;
  background-color: #0000ff;
  box-shadow: -4px 4px 0 0 rgb(2, 7, 90);
  top: 47%;
  left: 38%;
  border: none;
  color: white;
  text-align: center;
  text-decoration: none;
}
.watch:hover {
  background-color: #ff0000;
  box-shadow: -4px 4px 0 0 #740000;
}

.speaker {
  font-family: pixel;
  font-size: clamp(18px, 5vw, 24px);
  position: absolute;
  z-index: 2;
  width: 175px;
  transform: rotate(-15deg);
  line-height: 30px;
  border-radius: 100px;
  background-color: #0000ff;
  box-shadow: -4px 4px 0 0 rgb(2, 7, 90);
  top: 90%;
  left: 60%;
  border: none;
  color: white;
  text-align: center;
  text-decoration: none;
}
.speaker:hover {
  background-color: #ff0000;
  box-shadow: -4px 4px 0 0 #740000;
}

a:hover {
  cursor: url(/./cursors/link.cur), pointer;
}

.noselect {
  user-select: none;
}

.sticker,
.topic {
  user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  position: absolute;
  z-index: 200;
  width: 15%;
  height: auto;
  filter: drop-shadow(-4px 4px 0 rgb(0, 0, 255));
}
.sticker:hover,
.topic:hover {
  cursor: url("/./cursors/grab_hover.cur"), grab;
}
.logo {
  width: 20%;
  top: 80%;
  left: 50%;
}

.load {
  font-family: pixel;
}

.watch-mobile {
  display: none;
}

.dither-bg {
  position: fixed;
  z-index: -1;
  top: 0;
  left: 0;
}

/* --- Mobile --- */
@media screen and (max-width: 500px) {
  /* .sticker,
  .topic {
    display: none;
  } */

  .top-right p {
    font-size: clamp(18px, 5vw, 28px);
    text-align: left;
  }
  .top-right img {
    position: static;
    width: 60%;
    height: auto;
    padding-top: 0.5rem;
  }

  .cell-top-left p {
    position: static;
    font-size: clamp(18px, 5vw, 28px);
  }

  .cell-bottom-left p {
    text-align: left;
    font-size: clamp(16px, 4vw, 24px);
  }

  p[slot="l-vertical"] {
    font-size: clamp(14px, 3.5vw, 20px);
  }

  .watch:not(.watch-mobile) {
    display: none;
  }

  .watch-mobile,
  .speaker {
    display: inline-block;
    position: relative;
    top: auto;
    left: auto;
    width: 130px;
    font-size: 14px;
    line-height: 36px;
    padding: 0;
    margin-top: 1rem;
    transform: none;
  }

  .watch-mobile {
    margin-left: 0.5rem;
  }

  .button-row {
    text-align: center;
    margin-top: 0.5rem;
  }
}
.blob1 {
  top: 0%;
  left: 20%;
}
.blob2 {
  top: 20%;
  left: 74%;
}
.blob3 {
  top: 60%;
  left: 40%;
}
.blob4 {
  top: 45%;
  left: 81%;
}
.blob5 {
  top: 30%;
  left: 48%;
}
.robin {
  top: 55%;
  left: 18%;
}
.cube {
  top: 65%;
  left: 25%;
}
.ferris {
  clip-path: ellipse(100px 90px);
  top: 65%;
  left: 15%;
}
.laser {
  top: 60%;
  left: 30%;
  rotate: 25deg;
}
.nugget {
  top: 60%;
  left: 10%;
  width: 150px;
  height: auto;
}
.spoon {
  top: 35%;
  left: 12%;
  width: 50px;
  rotate: 50deg;
}
.cdj {
  top: 83%;
  left: 20%;
}
.linux {
  width: 100px;
  rotate: 20deg;
  top: 80%;
  left: 10%;
}
.logo {
  top: 62%;
  left: 45%;
}

.first-screenful {
  position: relative;
  box-sizing: border-box;
}
@media screen and (min-width: 501px) {
  .first-screenful {
    height: 100%;
    width: 100%;
  }
}
.brochure img {
  min-width: 0;
  width: 100%;
  height: auto;
  display: block;
}
table.brochure {
  border-collapse: collapse;
}
table.brochure td {
  border: min(0.5vw, 5px) solid blue;
  box-sizing: border-box;
  padding: 0px;
}

